[package]
name = "mwebsocket"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
mlua = { version = "0.8", features = ["luajit", "module"] }
tungstenite = "0.17.3"
url = "2.3.1"
