[package]
name = "mwebsocket"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
http = "0.2.8"
mlua = { version = "0.9.1", features = ["luajit", "module", "serialize"] }
serde_json = "1.0.107"
tungstenite = "0.20.1"
ureq = "2.8.0"
url = "2.4.1"

[profile.release]
lto = true
